qbittorrent/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: qbittorrent
  namespace: filme
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      k8s-app: qbittorrent
  template:
    metadata:
      labels:
        k8s-app: qbittorrent
    spec:
      hostNetwork: true
      containers:
        - name: qbittorrent
          image: linuxserver/qbittorrent:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /mnt/hddext4
              name: hdd
          resources:
            limits:
              memory: "100Mi"
              cpu: "100m"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: qbittorrent-config
        - name: hdd
          hostPath:
            path: /mnt/hddext4/Jellyfin-all/
      terminationGracePeriodSeconds: 0
      nodeSelector:
        kubernetes.io/os: linux
        kubernetes.io/arch: amd64
        kubernetes.io/hostname: tedy-desktop
