qbittorrent/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent-ingress
  namespace: filme
spec:
  routes:
    - match: Host(`qbittorrent.stoicatedy.ovh`)
      kind: Rule
      services:
        - name: qbittorrent
          port: 8080
  middlewares:
    - name: hsts-header
  tls:
    secretName: certificate-stoicatedy-ovh
